--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.0.0",
     "recharts": "^2.15.1",
