--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
+    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dnd": "^16.0.1",
@@ -73,6 +74,7 @@
     "@types/react": "^18",
     "@types/react-dom": "18",
     "@types/nodemailer": "^6.4.15",
+    "@types/qrcode": "^1.5.5",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
