--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -6,4 +6,4 @@ runConfig:
   # more instances in response to increased traffic.
   maxInstances: 1
 secrets:
-  - name: GEMINI_API_KEY
+  - GEMINI_API_KEY
