refactor: Use explicit 'env' syntax for secrets in apphosting.yaml

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,18 @@
-# https://firebase.google.com/docs/app-hosting/configure
-
+# Settings for Cloud Run
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
+  minInstances: 0
   maxInstances: 1
+  concurrency: 100
+  cpu: 1
+  memoryMiB: 512
+
+# Environment variables and secrets using the explicit mapping
+env:
+  - variable: GEMINI_API_KEY
+    secret: GEMINI_API_KEY
+  - variable: EMAIL_USER
+    secret: EMAIL_USER
+  - variable: EMAIL_PASS
+    secret: EMAIL_PASS
+  - variable: STRIPE_SECRET_KEY
+    secret: STRIPE_SECRET_KEY
